fix(button): adjust spacing for mobile

--- a/packages/components/src/components/bal-button/bal-button.scss
+++ b/packages/components/src/components/bal-button/bal-button.scss
@@ -372,7 +372,7 @@ bal-button.is-fullwidth {
       min-width: 100%;
       margin-right: 0 !important;
 
-      &:not(:last-child) {
+      &:not(:first-child) {
         margin-bottom: 8px;
       }
     }
